calico-enterprise_versioned_docs/version-3.14/visibility/get-started-cem.mdx
---
description: Tour the main features of Manager UI.
---

# Manager UI tutorial

## What you will learn

- Manager UI features and controls
- How to gain visibility into clusters

Let's go through each item in the Manager left navbar from top to bottom. You can follow along using any cluster.

## Dashboards

> From the left navbar, click Dashboards.

Dashboards are a birds-eye view of cluster activity. Note the following:

- The filter panel at the top lets you change the time range
- The **Layout Settings** shows the default metrics. To get WireGuard metrics for pod-to-pod and host-to-host encryption, you must [enable WireGuard](../compliance/encrypt-cluster-pod-traffic.mdx).

![dashboards](/img/calico-enterprise/3.14/dashboards-3.14.png)

## Service Graph

> From the left navbar, select **Service Graph**, **Default**

Service Graph provides a point-to-point, topographical representation of network traffic within your cluster. It is the primary tool for visibility and troubleshooting.

![service-graph](/img/calico-enterprise/3.14/service-graph.png)

**Namespaces**

Namespaces are the default view in Service Graph.

When you expand the top right panel `<<`, you see a detailed view of the service-to-service communications for the namespace.

![service-graph-namespace](/img/calico-enterprise/3.14/service-graph-namespace.png)

**Nodes and edges**

Lines going to/from nodes are called edges. When you click on a node or edge, the right panel shows details, and the associated flow logs are automatically filtered in the bottom panel.

![edges](/img/calico-enterprise/3.14/edges.png)

**Layers**

Layers allow you to create meaningful groupings of resources so you can easily hide and show them on the graph. For example, you can group resources for different platform infrastructure types in your cluster like networking, storage, and logging.

> Click the panel on the left (`>>`) by the Namespaces breadcrumb, and then expand the Tigera components layer.

![service-graph-layers](/img/calico-enterprise/3.14/service-graph-layers.png)

The **Tigera components** layer contains namespaces for {{prodname}} networking components, and a view of interest to Dev/Ops.

> Click the vertical ellipses and select, **Hide layer**. Notice that only the business application namespaces remain visible in the graph.

> To make this layer less visible, select **Restore layer** and click **De-emphasize layer**.

**Logs, alerts, and capture jobs**

The panel at the bottom below the graph provides tools for troubleshooting connectivity and performance issues. **Logs** (Flows, DNS, and HTTP) are the foundation of security and observability in {{prodname}}. When you select a node or edge in the graph, logs are filtered for the node or service. For example, here is a flow log with details including how the policies were processed in tiers.

![service-graph-flows](/img/calico-enterprise/3.14/service-graph-flows.png)

**Alerts**

For convenience, the Alerts tab duplicates the alerts you have enabled in the **Alerts tab** in the left navbar. By default, alerts are not enabled.

**Capture jobs**

Service Graph integrates a packet feature for capturing traffic for a specific namespace, service, replica set, daemonset, statefulset, or pod. You can then download capture files to your favorite visualization tool like WireShark.

> Right-click on any endpoint to start or schedule a capture.

![packet-capture-service](/img/calico-enterprise/3.14/packet-capture-service.png)

**Flow Visualizations**

> From the left navbar, select **Service Graph**, **Flow Visualizations**.

Flow Visualizer (also called, "FlowViz") is a {{prodname}} tool for drilling down into network traffic within the cluster to troubleshoot issues. The most common use of Flow Visualizer is to drill down and pinpoint which policies are allowing and denying traffic between services.

![flow-viz](/img/calico-enterprise/3.14/flow-viz.png)

## Policies

> From the left navbar, click **Policies**.

Network policy is the primary tool for securing a Kubernetes network. Policy is used to restrict network traffic (egress and ingress) in your cluster so only the traffic that you want to flow is allowed. {{prodname}} supports these policies:

- {{prodname}} network policy
- {{prodname}} global network policy
- Kubernetes policy

{{prodname}} uses **tiers** (also called, hierarchical tiers) to provide guardrails for managing network policy across teams. Policy tiers allow users with more authority (for example, Dev/ops user) to enforce network policies that take precedence over teams (for example, service owners and developers).

**Policies Board** is the default view for managing tiered policies.

![policy-board](/img/calico-enterprise/3.14/policy-board.png)

Users typically use a mix of Policy Board and YAMLs. Note that you can export one or all policies in a tier to YAML.

The **Policy Board filter** lets you filter by policy types and label selectors.

![policy-filters](/img/calico-enterprise/3.14/policy-filters.png)

The following features provide more security and guardrails for teams.

**Recommended a policy**

> In Policies Board, click **Recommend a policy**.

One of the first things you'll want to do after installation is to secure unprotected pods/workloads with network policy. (For example, Kubernetes pods allow traffic from any source by default.) The Recommend a policy feature generates policies that protect specific endpoints in the cluster. Users with minimal experience with network policy can easily get started.

![recommend-policy](/img/calico-enterprise/3.14/recommend-policy.png)

**Policy stage**

When you create a policy, it is a best practice to stage it to evaluate the effects before enforcing it. After you verify that a staged network policy is allowing traffic as expected, you can enforce it.

![stage-policyl](/img/calico-enterprise/3.14/stage-policy.png)

**Preview**

When you edit a policy, you can select **Preview** to see how changes may affect existing traffic.

![policy-preview](/img/calico-enterprise/3.14/policy-preview.png)

## Endpoints

> From the left navbar, click **Endpoints**.

**Endpoint Details**

This page is a list of all pods in the cluster (also known as workload endpoints).

![endpoints](/img/calico-enterprise/3.14/endpoints.png)

**Node List**

This page lists all nodes associated with your cluster.

![node-list](/img/calico-enterprise/3.14/node-list.png)

## Network Sets

Network sets and global network sets are {{prodname}} resources for defining IP subnetworks/CIDRs, which can be matched by standard label selectors in policy (Kubernetes or {{prodname}}). They are a powerful feature for use/reuse and scaling policy.

A simple use case is to limit traffic to/from external networks. For example, you can create a global network set with "deny-list CIDR ranges 192.0.2.55/32 and 203.0.113.0/24", and then reference the network set in a global network policy. This also allows you to see this traffic in Service Graph.

![networksets](/img/calico-enterprise/3.14/networksets.png)

## Managed clusters

> From the left navbar, click **Managed clusters**.

This page is where you switch views between clusters in Manager UI. When you connect to a different cluster, the entire Manager view changes to reflect the selected cluster.

![managed-clusters](/img/calico-enterprise/3.14/managed-clusters.png)

## Compliance

> From the left navbar, click **Compliance**.

Compliance tools that rely on periodic snapshots, do not provide accurate assessments of Kubernetes workloads against your compliance standards. {{prodname}} compliance dashboard and reports provide a complete inventory of regulated workloads, along with evidence of enforcement of network controls for these workloads. Additionally, audit reports are available to see changes to any network security controls.

**Compliance reports** are based on archived flow logs and audit logs for all {{prodname}} resources, and audit logs for Kubernetes resources in the Kubernetes API server.

![cis-benchmark](/img/calico-enterprise/3.14/cis-benchmark.png)

Using the filter, you can select report types.

![compliance-filter](/img/calico-enterprise/3.14/compliance-filter.png)

## Activity

> From the left navbar, select **Activity**, **Timeline**.

**Timeline**

What changed, who did it, and when? This information is critical for security. Native Kubernetes doesn’t provide an easy way to capture audit logs for pods, namespaces, service accounts, network policies, and endpoints. The {{prodname}} timeline provides audit logs for all changes to network policy and other resources associated with your {{prodname}} deployment.

![timeline](/img/calico-enterprise/3.14/timeline.png)

> From the left navbar, selection **Activity**, **Alerts**.

**Alerts**

How do you know if you have an infected workload? A possible threat? {{prodname}} detects and alerts on unexpected network behavior that may indicate a security breach. You can create alerts for:

- Known attacks and exploits (for example, exploits found at Shopify, Tesla, Atlassian)
- DOS attempts
- Attempted connections to botnets and command and control servers
- Abnormal flow volumes or flow patterns based on machine learning

![alerts](/img/calico-enterprise/3.14/alerts.png)

As shown, there are many types of alerts you can enable. None are enabled by default.

## Kibana

{{prodname}} includes a fully-integrated deployment of Elasticsearch to collect flow
log data that drives key features like the Flow Visualizer, metrics in the Dashboard and Policy Board, policy automation, and testing features and security. {{prodname}} also embeds Kibana so you can view raw log data for the traffic within your cluster.

> From the left navbar, click **Kibana**.

**Dashboards**

{{prodname}} comes with built-in dashboards.

![kibana-dashboards](/img/calico-enterprise/3.14/kibana-dashboards.png)

**Log data**

Kibana provides its own set of filtering capabilities to drill down into log data. For example, use filters to drill into flow log data for specific namespaces and pods. Or view details and metadata for a single flow log entry.

![kibana](/img/calico-enterprise/3.14/kibana.png)

Now that you understand the basics, we recommend the following:

- [Get started with tiered network policy](../network-policy/policy-tiers/tiered-policy.mdx)
- [Get started with network sets](../network-policy/networksets.mdx)
